--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "homepage": "https://adityagarg2198.github.io/ResumeBuilder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.1.0",
     "jspdf-html2canvas": "^1.4.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,6 +20,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
