--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://adityagarg2198.github.io/ResumeBuilder",
+  "homepage": "https://adityagarg2198.github.io/ResumeBuilder/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
